--- a/views/index.html
+++ b/views/index.html
@@ -20,14 +20,14 @@
 		
 <!-- head end --> 
 <!-- body start --> 
-    <div class="wrapper">
+
     <!-- wrapper_left -->
       <div id="wrapper_left">
       <!-- one -->
         <div id="one">
         <div id="one_left">
 
-        	<div id="search_field">Searching on specific topics</div>
+        	<div id="search_field">1. Searching on specific topics</div>
         	<div id="search">
             	<div id="search_left">specific topics:</div>
                 <div id="search_right">
@@ -51,7 +51,7 @@
         <div id="one">
          <div id="one_left">
        
-        	<div id="search_field">Searching Specific user in Z days,Y keywords</div>
+        	<div id="search_field">2a. Searching Specific user in Z days,Y keywords</div>
         	<div id="search">
             	<div id="search_left">Screen_names :</div>
                 <div id="search_right">
@@ -95,7 +95,7 @@
         
          <div id="one_left">
        
-        	<div id="search_field">Searching venues a specific user visited last X days</div>
+        	<div id="search_field">2b. Searching venues a specific user visited last X days</div>
         	<div id="search">
             	<div id="search_left">User:</div>
                 <div id="search_right">
@@ -127,7 +127,7 @@
         <div id="one">
         	<div id="one_left">
        
-        	<div id="search_field">Searching vanues specific user visit last X days</div>
+        	<div id="search_field">2c. Searching vanues specific user visit last X days</div>
         	<div id="search">
             	<div id="search_left">Location:</div>
                 <div id="search_right">
@@ -153,48 +153,8 @@
         </div>
         </div>
       </div>
-      <!-- wrapper_right -->
-      <div id="wrapper_right">
-      	<div id='wrapper_right_top'>
-       
-        	<div id="box">
-						<ul id="list">
-							<li><a href="https://foursquare.com"><img src="./image/four.jpg" /></a></li>
-							<li><a href="https://twitter.com/?lang=en-gb"><img src="./image/twitter.jpg"/></a></li>
-							<li><a href="https://en-gb.facebook.com"><img src="./image/facebook.jpg"/></a></li>
-						</ul>
-						<ul id="num">
-						  <li class="active">1</li>
-							<li>2</li>
-							<li>3</li>		
-						</ul>
-			</div>	
-        </div>
-        
-        <div id="wrapper_right_bottom">
-        
-       	  <div id="instruc_title"> Search instruction :</div>
-          
-            <div id="instruction_show"> 
-              <ol>
-                <li>Tracking public discussions on specific topics (e.g. via hashtags or keywords): input keywords and/or hashtags. Output a list of messages containing the required keyword/hashtags.</li>
-              </ol>
-              <p align="left"> </p>
-              <ol>
-                <li>What specific users discuss about: the ids/screen_names of up to 10 users are provided in input and the most frequent Y keywords used in the last Z days will be displayed (with associated total count, as well as count for each users). Input: user ids, Y, Z – with Z &gt;1</li>
-              </ol>
-              <p align="left">&nbsp;</p>
-              <ol>
-                <li>What points of interest (venues) a specific user has visited in the last X days (input: user id, plus X – value of X may be zero:</li>
-              </ol>
-              <p align="left"> </p>
-              <ol>
-                <li>Who is visiting venues in a specific geographic area (or visiting a named venue) or have done so in the last X days (input: name of location or coordinates, plus X – value of X may be zero:).</li>
-              </ol>
-            </div>
-        </div>
-      </div>
-	</div>
+      
+     
 <!-- body end -->
 <!-- foot start -->
 	<div id='bottom'>
