--- a/views/index.html
+++ b/views/index.html
@@ -37,7 +37,7 @@
                 <div id="search_left">Location:</div>
                 <div id="search_right">
                 <input id='search_text' name="LatitudeandLongitude" type="text" value=""
-                style="color#d3d7d4;" onfocus="if(value=='e.g. 37.78157,-122.398720,1mi'){this.style.color='#000';value=''}" onblur="if(value==''){this.style.color='#ff00ff';value='e.g. 37.78157,-122.398720,1mi'}"/>
+                style="color#d3d7d4;"/>
                 </div>
             </div>
             
