--- a/views/index.html
+++ b/views/index.html
@@ -61,23 +61,23 @@
                 <div id="search_left">How many keywords:</div>
                 <div id="search_right">
                 <div id='select_box'>
-                <select id='select'>
-                	<option value ="volvo">0</option>
-  					<option value ="volvo">1</option>
- 				 	<option value ="saab">2</option>
-  					<option value="opel">3</option>
-  					<option value="audi">4</option>
+                <select id='select2a' name='select2a'>
+                    <option value =1>1</option>
+                    <option value =2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
 				</select>
                 </div>
                 </div>
                 <div id="search_left">How many days:</div>
                 <div id="search_right">
                 <div id='select_box'>
-                <select id='select'>
-  					<option value ="volvo">1</option>
- 				 	<option value ="saab">2</option>
-  					<option value="opel">3</option>
-  					<option value="audi">4</option>
+                <select id='select2b' name='select2b'>
+                    <option value =0>0</option>
+                    <option value =1>1</option>
+                    <option value =2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
 				</select>
                 </div>
                 </div>
@@ -105,12 +105,12 @@
                 <div id="search_left">Number of days:</div>
                 <div id="search_right">
                 <div id='select_box'>
-                <select id='select'>
-                	<option value ="volvo">0</option>
-  					<option value ="volvo">1</option>
- 				 	<option value ="saab">2</option>
-  					<option value="opel">3</option>
-  					<option value="audi">4</option>
+                <select id='select3' name='select3'>
+                    <option value =0>0</option>
+                    <option value =1>1</option>
+                    <option value =2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
 				</select>
                 </div>
                 </div>
@@ -137,12 +137,12 @@
                 <div id="search_left">How many days:</div>
                 <div id="search_right">
                 <div id='select_box'>
-                <select id='select'>
-                	<option value ="volvo">0</option>
-  					<option value ="volvo">1</option>
- 				 	<option value ="saab">2</option>
-  					<option value="opel">3</option>
-  					<option value="audi">4</option>
+                <select id='select4' name='select4'>
+                    <option value =0>0</option>
+                    <option value =1>1</option>
+                    <option value =2>2</option>
+                    <option value=3>3</option>
+                    <option value=4>4</option>
 				</select>
                 </div>
                 </div>
