--- a/views/index.html
+++ b/views/index.html
@@ -95,7 +95,7 @@
         
          <div id="one_left">
        
-        	<div id="search_field">2b. Searching venues a specific user visited last X days</div>
+        	<div id="search_field">2b. Searching venues a user visited last X days</div>
         	<div id="search">
             	<div id="search_left">User:</div>
                 <div id="search_right">
@@ -152,6 +152,29 @@
         <input class='search_submit' name = "fourth" type="submit" value='select' onclick="window.location='result.html';" style="width:90px;height:45px;" />
         </div>
         </div>
+
+         <!-- five -->
+        <div class="nav"></div>
+        <div id="one">
+            <div id="one_left">
+       
+            <div id="search_field">3a. Search interests in a specific geographic area</div>
+            <div id="search">
+                <div id="search_left">Venue:</div>
+                <div id="search_right">
+                <input id='search_text' name="User" type="text" value="input: name of location or coordinates" 
+                style="color#d3d7d4;" onfocus="if(value=='input: name of location or coordinates'){this.style.color='#000';value=''}" onblur="if(value==''){this.style.color='#ff00ff';value='input: name of location or coordinates'}"/>
+                </div>
+            </div>
+        </div>
+        <div id="one_right">
+        <input class='search_submit' name = "fourth" type="submit" value='select' onclick="window.location='result.html';" style="width:90px;height:45px;" />
+        </div>
+        </div>
+
+
+
+
       </div>
       
      
