--- a/views/index.html
+++ b/views/index.html
@@ -31,8 +31,7 @@
         	<div id="search">
             	<div id="search_left">specific topics:</div>
                 <div id="search_right">
-                <input id='search_text' name="keywords" type="text" value="" 
-                style="color#d3d7d4;" onfocus="if(value=='e.g. hashtags or keywords'){this.style.color='#000';value=''}" onblur="if(value==''){this.style.color='#ff00ff';value='e.g. hashtags or keywords'}"/>
+                <input id='search_text' name="keywords"/>
                 </div>
                 <div id="search_left">Location:</div>
                 <div id="search_right">
@@ -55,8 +54,7 @@
         	<div id="search">
             	<div id="search_left">Screen_names :</div>
                 <div id="search_right">
-                <input id='search_text' name="Screen_name"type="text" value="" 
-                style="color#d3d7d4;" onfocus="if(value=='e.g. ids/screen_names of up to 10 users'){this.style.color='#000';value=''}" onblur="if(value==''){this.style.color='#ff00ff';value='e.g. ids/screen_names of up to 10 users'}"/>
+                <input id='search_text' name="Screen_name"type="text"/>
                 </div>
                 <div id="search_left">How many keywords:</div>
                 <div id="search_right">
@@ -99,8 +97,7 @@
         	<div id="search">
             	<div id="search_left">User:</div>
                 <div id="search_right">
-                <input id='search_text' name="User" type="text" value="input a user name e.g. fabcira" 
-                style="color#d3d7d4;" onfocus="if(value=='input a user name e.g. fabcira'){this.style.color='#000';value=''}" onblur="if(value==''){this.style.color='#ff00ff';value='input a user name e.g. fabcira'}"/>
+                <input id='search_text' name="User" type="text" />
                 </div>
                 <div id="search_left">Number of days:</div>
                 <div id="search_right">
@@ -131,8 +128,7 @@
         	<div id="search">
             	<div id="search_left">Location:</div>
                 <div id="search_right">
-                <input id='search_text' name="venueid" type="text" value="" 
-                style="color#d3d7d4;" onfocus="if(value=='e.g. Sheffield (or St Peter & St Paul School'){this.style.color='#000';value=''}" onblur="if(value==''){this.style.color='#ff00ff';value='e.g. Sheffield (or St Peter & St Paul School'}"/>
+                <input id='search_text' name="venueid" type="text" />
                 </div>
                 <div id="search_left">How many days:</div>
                 <div id="search_right">
@@ -162,8 +158,7 @@
             <div id="search">
                 <div id="search_left">Venue:</div>
                 <div id="search_right">
-                <input id='search_text' name="User" type="text" value="input: name of location or coordinates" 
-                style="color#d3d7d4;" onfocus="if(value=='input: name of location or coordinates'){this.style.color='#000';value=''}" onblur="if(value==''){this.style.color='#ff00ff';value='input: name of location or coordinates'}"/>
+                <input id='search_text' name="User" type="text" />
                 </div>
             </div>
         </div>
