--- a/views/index.html
+++ b/views/index.html
@@ -158,7 +158,7 @@
             <div id="search">
                 <div id="search_left">Venue:</div>
                 <div id="search_right">
-                <input id='search_text' name="User" type="text" />
+                <input id='search_text' name="Venue" type="text" />
                 </div>
             </div>
         </div>
