--- a/views/googlemaptest.html
+++ b/views/googlemaptest.html
@@ -11,17 +11,28 @@
  <script type="text/javascript"
  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_BbMxx-ILdm9CFhwVs6_qDr3qr9_qpMQ&sensor=false">
  </script>
+
+
+
  <script type="text/javascript">
  function initialize() {
  var myLatlng = new google.maps.LatLng(53.38108855193859, -1.4801287651062012);
+  var myLatlng1 = new google.maps.LatLng(53.28108855193859, -1.4801287651062012);
  var mapOptions = {
  zoom: 18,
  center: myLatlng }
  var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+
  var marker = new google.maps.Marker({
  position: myLatlng,
  map: map,
  title:"Here!!" });
+
+  var marker1 = new google.maps.Marker({
+ position: myLatlng1,
+ map: map,
+ title:"Here!!" }); 
+
 
  var infowindow = new google.maps.InfoWindow({
  content: '<IMG BORDER="0" ALIGN="Left" height="82" hspace="10" vspace="10" SRC="http://www.3dmgame.com/uploads/allimg/150521/153_150521155443_1_lit.jpg"> I work at the Department of Computer Science, The University of Sheffield',
@@ -34,6 +45,9 @@
  }
  google.maps.event.addDomListener(window, 'load', initialize);
  </script>
+
+
+ 
 </head>
 <body>
 <h1>Where I work</h1>
