--- a/views/index.html
+++ b/views/index.html
@@ -163,7 +163,7 @@
             </div>
         </div>
         <div id="one_right">
-        <input class='search_submit' name = "fourth" type="submit" value='select' onclick="window.location='result.html';" style="width:90px;height:45px;" />
+        <input class='search_submit' name = "fifth" type="submit" value='select' onclick="window.location='result.html';" style="width:90px;height:45px;" />
         </div>
         </div>
 
