--- a/views/TryWrite.html
+++ b/views/TryWrite.html
@@ -1,33 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
-<style type="text/css">
-html { height: 100% }
-body { height: 100%; margin: 0; padding: 0 }
-#map-canvas { height: 100% }
-</style>
-<title>Where I work</title>
-<script type="text/javascript"src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_BbMxx-ILdm9CFhwVs6_qDr3qr9_qpMQ&sensor=false">
-</script>
-
-<script type="text/javascript">
-function initialize() {
-	var myLatlng = new google.maps.LatLng(53.38108855193859, -1.4801287651062012);
-	var myLatlng1 = new google.maps.LatLng(53.28108855193859, -1.4801287651062012);
-	var mapOptions = {zoom: 18,center: myLatlng }
-	var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
-
-	var marker = new google.maps.Marker({position: myLatlng,map: map,title:"Here!!" });
-	var infowindow = new google.maps.InfoWindow({content: 'Yes',maxWidth:200 });
-
-	infowindow.open(map,marker);
-	google.maps.event.addListener(marker,'click', function() {infowindow.open(map, marker); });
-}
-
-google.maps.event.addDomListener(window,'load', initialize);
-</script>
-</head>
-<body>
-	<h1>Where I work</h1><div id="map-canvas" style="background-color:#FFD700;width:50%;height:300pt;align:center;"/><div><p>I work at the Department of Computer Science</p></div>
-</body>
+<!DOCTYPE html><html><head><meta name="viewport" content="initial-scale=1.0, user-scalable=no"/><style type="text/css">html { height: 100% }body { height: 100%; margin: 0; padding: 0 }#map-canvas { height: 100% }</style><title>Where I work</title><script type="text/javascript"src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_BbMxx-ILdm9CFhwVs6_qDr3qr9_qpMQ&sensor=false"></script><script type="text/javascript">function initialize() {var myLatlng0 = new google.maps.LatLng(37.38380480621854,-122.01294262781505);var marker0 = new google.maps.Marker({position: myLatlng0,map: map,title:"Here!!" });var myLatlng1 = new google.maps.LatLng(37.383823224747736,-122.0129481794422);var marker1 = new google.maps.Marker({position: myLatlng1,map: map,title:"Here!!" });var myLatlng2 = new google.maps.LatLng(37.383900702843725,-122.01293706893921);var marker2 = new google.maps.Marker({position: myLatlng2,map: map,title:"Here!!" });var myLatlng = new google.maps.LatLng(37.38380480621854,-122.01294262781505);var marker = new google.maps.Marker({position: myLatlng,map: map,title:"Here!!" });var mapOptions = {zoom: 18,center: myLatlng };var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);var infowindow = new google.maps.InfoWindow({content: 'Yes',maxWidth:200 });infowindow.open(map,marker);google.maps.event.addListener(marker,'click', function() {infowindow.open(map, marker); });}google.maps.event.addDomListener(window,'load', initialize);</script></head><body><h1>Where I work</h1><div id="map-canvas" style="background-color:#FFD700;width:50%;height:300pt;align:center;"/><div><p>I work at the Department of Computer Science</p></div></body>
