--- a/public/css/index.css
+++ b/public/css/index.css
@@ -56,7 +56,7 @@ body{
 	border-radius: 10px;
 }
 
-#one:hover{font-size:23; background:#336666; color:#990099}
+#one:hover{font-size:23; background:#336666}
 
 #one_left{
 	width: 500px;
@@ -98,6 +98,15 @@ body{
 	margin-left:10px;
 	float:left;
 	}
+#search_right_notice{
+	font-size:14px;
+	/*border: 1px solid red;*/
+	width: 290px;
+	height: 33px;
+	line-height: 33px;
+	margin-left:220px;
+	float:left;
+}
 #search_text{
 	width: 285px;
 	height: 30px;
