--- a/views/TryWrite.html
+++ b/views/TryWrite.html
@@ -1,3 +1,13 @@
+<?xml version="1.0"?>
+
+<RDF>
+  <Description about="http://www.w3school.com.cn/RDF">
+    <author>David</author>
+    <homepage>http://www.w3school.com.cn</homepage>
+  </Description>
+</RDF>
+
+
 <!DOCTYPE html>
 <html>
 <head>
