--- a/views/googlemaptest.html
+++ b/views/googlemaptest.html
@@ -35,13 +35,15 @@
 
 
  var infowindow = new google.maps.InfoWindow({
- content: '<IMG BORDER="0" ALIGN="Left" height="82" hspace="10" vspace="10" SRC="http://www.3dmgame.com/uploads/allimg/150521/153_150521155443_1_lit.jpg"> I work at the Department of Computer Science, The University of Sheffield',
+ content: '<IMG BORDER="0" ALIGN="Left" height="82" hspace="10" vspace="10" SRC="http://www.3dmgame.com/uploads/allimg/150521/153_150521155443_1_lit.jpg"> www.baidu.com I work at the Department of Computer Science, The University of Sheffield',
  maxWidth:200 });
 
 
  infowindow.open(map,marker);
  google.maps.event.addListener(marker, 'click', function() {
- infowindow.open(map, marker); });
+ // infowindow.open(map, marker); 
+ window.open('http://www.baidu.com');
+});
  }
  google.maps.event.addDomListener(window, 'load', initialize);
  </script>
