--- a/views/TryRDFa.html
+++ b/views/TryRDFa.html
@@ -1,43 +1,35 @@
-<body vocab="http://schema.org">
-...
-<div property="breadcrumb">
-  <a href="http://www.ibm.com/developerworks/">IBM developerWorks</a> >
-    <a href="http://www.ibm.com/developerworks/web/">Web development</a> >
-    <a href="http://www.ibm.com/developerworks/views/web/library.jsp"
-        >Technical library</a>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Using about with a table</title>
+</head>
+<body>
+ 
+<table vocab="http://schema.org/" border="1">
+  
+  <tr>
+    <td>name</td>
+    <td>photo</td>
+    <td>category</td>
+    <td>address</td>
+    <td>URL</td>
+    <td>description</td>
+  </tr>
+  
+  
+  <tr>
+    <td about="Item1" typeof="Venueobject" property="name">venue name</td>
+    <td about="Item1" property="photo">photo!</td>  
+    <td about="Item1" property="category">category!</td>   
+    <td about="Item1" property="address">address!</td>   
+    <td about="Item1" property="URL">URL!</td>
+    <td about="Item1" property="description">description!</td>   
+  </tr>
+  
+  
 
-<div typeof="Article">
 
-<div property="name">An introduction to RDF</div>
-
-<p property="author" about="#uche.ogbuji" typeof="Person">
-   by <span property="name">Uche Ogbuji</span>, <span property="jobTitle">Partner</span>,
-   <span property="worksFor">Zepheira</span>.
-</p>
-
-<div>Published: <span property="datePublished">01 Dec 2000</span></div>
-
-<div property="description">
-  <b>Summary</b>: This article introduces Resource Description Framework (RDF),
-  developed by the W3C for Web-based metadata, using XML as an interchange syntax.
-  RDF's essential aim is to make work easier for autonomous agents, 
-  which would refine the Web by improving search engines and service directories. 
-  Author Uche Ogbuji gives an overview of RDF aspects from schemas to usage scenarios.
-  The article assumes that you are already familiar with XML.
-</div>
-
-<div>Tags for this article: 
-  <span property="keywords">introduction</span>,
-  <span property="keywords">rdf</span>,
-  <span property="keywords">tutorial</span>
-.</div>
-
-<div prefix="fben: http://www.freebase.com">
-  This article's texts is suitable for a wide audience, with a Fog index of 
-  <span property="fben:gunning_fog_index">10.2</span>.
-</div>
-
-</div>
-...
+</table>
+ 
 </body>
+</html>
