加一搜索框

--- a/views/index.html
+++ b/views/index.html
@@ -182,6 +182,29 @@
         </div>
         </div>
 
+        <!-- six -->
+        <div id="one">
+        <div id="one_left">
+
+            <div id="search_field">searching from database</div>
+            <div id="search">
+                <div id="search_left">Screen name:</div>
+                <div id="search_right">
+                <input id='search_text' type="text" name=""/>
+                </div>
+
+                <div id="search_left">Venue name:</div>
+                <div id="search_right">
+                <input id='search_text' name="" type="text" />
+                </div>
+            </div>
+            
+        </div>
+        <div id="one_right">
+        <input class='search_submit' name = "" type="submit" value='select'    style="width:90px;height:45px;" /></a>
+        </div>
+        </div>
+
 
 
 
