--- a/views/index.html
+++ b/views/index.html
@@ -190,18 +190,18 @@
             <div id="search">
                 <div id="search_left">Screen name:</div>
                 <div id="search_right">
-                <input id='search_text' type="text" name=""/>
+                <input id='search_text' type="text" name="sqlscreen_name"/>
                 </div>
 
                 <div id="search_left">Venue name:</div>
                 <div id="search_right">
-                <input id='search_text' name="" type="text" />
+                <input id='search_text' name="sqlvenue_name" type="text" />
                 </div>
             </div>
             
         </div>
         <div id="one_right">
-        <input class='search_submit' name = "" type="submit" value='select'    style="width:90px;height:45px;" /></a>
+        <input class='search_submit' name = "sixth" type="submit" value='select'    style="width:90px;height:45px;" /></a>
         </div>
         </div>
 
